# fun-suslik

./: .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  FunSuSLik.agda  FunSuSLik.agdai  README.md  build.sh  correctness-example.txt  fun-SuSLik.rkt  fun-SuSLik_simple.rkt  fun-suslik.cabal  fun-suslik.sh  hie.yaml  raw-benchmark-results-macos.txt  rec-correctness-example.txt  run-tests.sh  setup.sh  stack.yaml  suslik.sh
.stack-work/: stack.sqlite3
benchmark/: .gitignore
benchmark/append/: append copy.c  append_c.c  append_hs.hs  append_hs_builtin.hs  append_hs_outdated.hs
benchmark/filter/: filter_c.c  filter_hs.hs  test.hs
benchmark/maximum/: maximum_c.c  maximum_hs.hs
benchmark/multi_map/: multi_map_c.c  multi_map_hs.hs
benchmark/sll_map/: sll_map_c.c  sll_map_c_inplace.c  sll_map_hs.hs  sll_map_hs_builtin.hs
benchmark/sum/: sum_c.c  sum_hs.hs
benchmark/tree_map/: tree_map_c.c  tree_map_hs.hs
docs/: Makefile  defs.tex  formal-def.out  formal-def.tex  post.txt
examples/: List.fsus  TreeAdd1.fsus  add1.fsus  append.fsus  car.fsus  constNil.fsus  filterLt20000.fsus  filterLt9_nonexhaustive.fsus  fold.fsus  foldList.fsus  foldr.fsus  leftList.fsus  map.fsus  mapAdd1_nonexhaustive.fsus  mapSum.fsus  maximum.fsus  sort.fsus  sum.fsus  sumTailRec.fsus  take.fsus  times2.fsus  water.fsus  zipWith.fsus
examples-old/: append.fsus  reverse.fsus  subseqs.fsus
formalized/: .FunSuSLik.agda.~undo-tree~  .WellScopedNames.agda.~undo-tree~  FunSuSLik.agda  FunSuSLik.agdai  WellScopedNames.agda  WellScopedNames.agdai
old/src/Error/: Error.hs
old/src/Nucleus/: Expr.hs
old/src/Representation/: Parts.hs
src/: Main.hs
src/Backend/: DOT.hs  Emit.hs
src/Backend/SuSLik/: Layout.hs  Monad.hs  SSL.hs  SuSLik.hs
src/EGraph/: EGraph.hs  Rewrite.hs
src/Error/: Error.hs  Render.hs
src/Nucleus/: Expr.hs  Parser.hs  TypeChecker.hs
src/Representation/: Parts.hs
src/Syntax/: BiScope.hs  Expr.hs  FreshGen.hs  Name.hs  Ppr.hs
src/Syntax/Simple/: Def.hs  Defunctionalize.hs  Expr.hs  GenerateNames.hs  Heaplet.hs  IsNullTranslation.hs  Parse.hs  Shift.hs  SuSLik.hs  Test.hs  ToSuSLik.hs  TopLevelTranslation.hs  TranslateLayoutMatch.hs  TranslateLets.hs  TypeCheck.hs  UnfoldConstructors.hs  UnfoldEmptyConstructors.hs
src/Testing/: Benchmark.hs  Test.hs  TestConfig.hs
tests/: append.golden  cons.fsus  cons.golden  filterLt9.fsus  filterLt9.golden  leftList.golden  mapAdd1.fsus  mapAdd1.golden  mapSum.fsus  mapSum.golden  maximum.golden  options.json  singleton.fsus  singleton.golden  sum.fsus  sum.golden  take.golden
