cabal-version:      2.4
name:               fun-suslik
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             David Young
maintainer:         roboguy06@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable fun-suslik
    main-is:          Main.hs

    ghc-options: -fprof-auto -auto-all -O2 -prof -rtsopts -Wincomplete-patterns

    -- Modules included in this executable, other than Main.
    other-modules:
      Syntax.Simple.Def
      Syntax.Simple.Expr
      Syntax.Simple.Parse
      Syntax.Simple.Shift
      Syntax.Simple.SuSLik
      Syntax.Simple.TypeCheck
      Syntax.Simple.UnfoldConstructors
      Syntax.Simple.UnfoldEmptyConstructors
      Syntax.Simple.TranslateLayoutMatch
      Syntax.Simple.ToSuSLik
      Syntax.FreshGen
      Syntax.Name
      Syntax.Ppr
      Syntax.Simple.Heaplet


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0,
                      uniplate,
                      equivalence,
                      mtl,
                      STMonadTrans,
                      containers,
                      deriving-compat,
                      bifunctors,
                      bound,
                      megaparsec,
    hs-source-dirs:   src
    default-language: Haskell2010
