cabal-version:      2.4
name:               fun-suslik
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             David Young
maintainer:         roboguy06@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library fun-suslik-lib
    ghc-options: -Wincomplete-patterns

    -- Modules included in this executable, other than Main.
    other-modules:
      Testing.Test
      Syntax.Simple.Def
      Syntax.Simple.Expr
      Syntax.Simple.Parse
      Syntax.Simple.Shift
      Syntax.Simple.SuSLik
      Syntax.Simple.TypeCheck
      Syntax.Simple.UnfoldConstructors
      Syntax.Simple.UnfoldEmptyConstructors
      Syntax.Simple.TranslateLayoutMatch
      Syntax.Simple.TopLevelTranslation
      Syntax.Simple.ToSuSLik
      Syntax.Simple.Defunctionalize
      Syntax.FreshGen
      Syntax.Name
      Syntax.Ppr
      Syntax.Simple.Heaplet
      Syntax.Simple.TranslateLets


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base,
                      uniplate,
                      equivalence,
                      mtl,
                      STMonadTrans,
                      containers,
                      deriving-compat,
                      bifunctors,
                      bound,
                      megaparsec,
                      lens,
                      process,
                      tasty,
                      tasty-golden,
                      filepath,
                      aeson,
                      bytestring,
    hs-source-dirs:   src
    default-language: Haskell2010

executable fun-suslik
    main-is:          Main.hs
    build-depends:    base,
                      uniplate,
                      equivalence,
                      mtl,
                      STMonadTrans,
                      containers,
                      deriving-compat,
                      bifunctors,
                      bound,
                      megaparsec,
                      lens,
                      process,
                      tasty,
                      tasty-golden,
                      filepath,
                      aeson,
                      bytestring,
                      fun-suslik-lib,
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite fun-suslik-tests
    type: exitcode-stdio-1.0
    main-is: Testing/Test.hs
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -main-is Testing.Test
    build-depends: base,
                   process,
                   tasty,
                   tasty-golden,
                   filepath,
                   aeson,
                   bytestring,
                   fun-suslik-lib,

