cabal-version:      2.4
name:               fun-suslik
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             David Young
maintainer:         roboguy06@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library fun-suslik-lib
    ghc-options: -Wincomplete-patterns

    -- Modules included in this executable, other than Main.
    other-modules:
      Testing.Test
      Testing.TestConfig
      Testing.Benchmark
      Syntax.Simple.Def
      Syntax.Simple.Expr
      Syntax.Simple.Parse
      Syntax.Simple.Shift
      Syntax.Simple.SuSLik
      Syntax.Simple.TypeCheck
      Syntax.Simple.UnfoldConstructors
      Syntax.Simple.UnfoldEmptyConstructors
      Syntax.Simple.TranslateLayoutMatch
      Syntax.Simple.TopLevelTranslation
      Syntax.Simple.ToSuSLik
      Syntax.Simple.Defunctionalize
      Syntax.FreshGen
      Syntax.Name
      Syntax.Ppr
      Syntax.Simple.Heaplet
      Syntax.Simple.TranslateLets

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base < 4.17,
                      uniplate <= 1.6.13,
                      equivalence <= 0.4.1,
                      mtl <= 2.2.2,
                      STMonadTrans <= 0.4.6,
                      containers <= 0.6.5.1,
                      deriving-compat <= 0.6.3,
                      bifunctors <= 5.5.15,
                      bound <= 2.0.6,
                      megaparsec <= 9.3.0,
                      lens <= 5.2.1,
                      process <= 1.6.16.0,
                      tasty <= 1.4.3,
                      tasty-golden <= 2.3.5,
                      filepath <= 1.4.2.2,
                      aeson <= 2.1.2.1,
                      bytestring <= 0.11.3.1,
    hs-source-dirs:   src
    default-language: Haskell2010

executable fun-suslik
    main-is:          Main.hs
    build-depends:    base < 4.17,
                      uniplate <= 1.6.13,
                      equivalence <= 0.4.1,
                      mtl <= 2.2.2,
                      STMonadTrans <= 0.4.6,
                      containers <= 0.6.5.1,
                      deriving-compat <= 0.6.3,
                      bifunctors <= 5.5.15,
                      bound <= 2.0.6,
                      megaparsec <= 9.3.0,
                      lens <= 5.2.1,
                      process <= 1.6.16.0,
                      tasty <= 1.4.3,
                      tasty-golden <= 2.3.5,
                      filepath <= 1.4.2.2,
                      aeson <= 2.1.2.1,
                      bytestring <= 0.11.3.1,
                      criterion <= 1.6.0.0,
                      fun-suslik-lib,
    hs-source-dirs:   src
    default-language: Haskell2010
    other-modules:
        Syntax.FreshGen
        Syntax.Name
        Syntax.Ppr
        Syntax.Simple.Def
        Syntax.Simple.Defunctionalize
        Syntax.Simple.Expr
        Syntax.Simple.Heaplet
        Syntax.Simple.Parse
        Syntax.Simple.SuSLik
        Syntax.Simple.ToSuSLik
        Syntax.Simple.TopLevelTranslation
        Syntax.Simple.TranslateLayoutMatch
        Syntax.Simple.TranslateLets
        Syntax.Simple.TypeCheck
        Syntax.Simple.UnfoldConstructors
        Syntax.Simple.UnfoldEmptyConstructors

test-suite fun-suslik-tests
    type: exitcode-stdio-1.0
    main-is: Testing/Test.hs
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -main-is Testing.Test
    build-depends: base < 4.17,
                   process <= 1.6.16.0,
                   tasty <= 1.4.3,
                   tasty-golden <= 2.3.5,
                   filepath <= 1.4.2.2,
                   aeson <= 2.1.2.1,
                   bytestring <= 0.11.3.1,
                   fun-suslik-lib,

benchmark fun-suslik-bench
    type: exitcode-stdio-1.0
    main-is: Testing/Benchmark.hs
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -main-is Testing.Benchmark
    build-depends: base < 4.17,
                   process <= 1.6.16.0,
                   tasty <= 1.4.3,
                   tasty-golden <= 2.3.5,
                   filepath <= 1.4.2.2,
                   aeson <= 2.1.2.1,
                   bytestring <= 0.11.3.1,
                   fun-suslik-lib,
    other-modules: Testing.TestConfig

